--- a/impressum/index.html
+++ b/impressum/index.html
@@ -32,7 +32,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div>
 
-    <a class="site-title" href="/">Joomlo - Joomla einfach besser versehen.</a>
+    <a class="site-title" href="/">Joomlo - Joomla einfach besser verstehen.</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -95,11 +95,11 @@ Rosensteinstraße 9/3<br />
 
   <div class="wrap">
 
-    <h2 class="footer-heading">Joomlo - Joomla einfach besser versehen.</h2>
+    <h2 class="footer-heading">Joomlo - Joomla einfach besser verstehen.</h2>
 
     <div class="footer-col-1 column">
       <ul>
-        <li>Joomlo - Joomla einfach besser versehen.</li>
+        <li>Joomlo - Joomla einfach besser verstehen.</li>
         <li><a href="mailto:info@mittl-medien.de">info@mittl-medien.de</a></li>
       </ul>
     </div>
