--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Joomlo - Joomla einfach besser versehen.</title>
+    <title>Joomlo - Joomla einfach besser verstehen.</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Ein Blog rund um Joomla - Lösungen, Hilfe und Support - Joomla besser verstehen.">
     <link rel="canonical" href="http://www.joomlo.de/">
@@ -32,7 +32,7 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div>
 
-    <a class="site-title" href="/">Joomlo - Joomla einfach besser versehen.</a>
+    <a class="site-title" href="/">Joomlo - Joomla einfach besser verstehen.</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -93,11 +93,11 @@
 
   <div class="wrap">
 
-    <h2 class="footer-heading">Joomlo - Joomla einfach besser versehen.</h2>
+    <h2 class="footer-heading">Joomlo - Joomla einfach besser verstehen.</h2>
 
     <div class="footer-col-1 column">
       <ul>
-        <li>Joomlo - Joomla einfach besser versehen.</li>
+        <li>Joomlo - Joomla einfach besser verstehen.</li>
         <li><a href="mailto:info@mittl-medien.de">info@mittl-medien.de</a></li>
       </ul>
     </div>
