--- a/impressum/index.html
+++ b/impressum/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>impressum</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Ein Blog rund um Joomla - Lösungen, Hilfe und Support - Joomla besser verstehen.">
+    <meta name="description" content="Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla besser verstehen.">
     <link rel="canonical" href="http://www.joomlo.de/impressum/">
 
     <!-- Custom CSS -->
@@ -22,7 +22,7 @@
   <div class="wrap">
     
 
-    <a class="site-title" href="/">Joomlo - Joomla einfach besser verstehen.</a>
+    <a class="site-title" href="/">Joomlo - Joomla! einfach besser verstehen.</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -119,11 +119,11 @@ Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend e
 
   <div class="wrap">
 
-    <h2 class="footer-heading">Joomlo - Joomla einfach besser verstehen.</h2>
+    <h2 class="footer-heading">Joomlo - Joomla! einfach besser verstehen.</h2>
 
     <div class="footer-col-1 column">
       <ul>
-        <li>Joomlo - Joomla einfach besser verstehen.</li>
+        <li>Joomlo - Joomla! einfach besser verstehen.</li>
         <li><a href="mailto:info@mittl-medien.de">info@mittl-medien.de</a></li>
         <li><a href="tel:004971174009879">0049 (0) 711 74 00 98 79</a></li>
         <li><a href="http://mittl-medien.de">mittl-medien.de</a></li>
@@ -172,7 +172,7 @@ Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend e
     </div>
 
     <div class="footer-col-3 column">
-      <p class="text">Ein Blog rund um Joomla - Lösungen, Hilfe und Support - Joomla besser verstehen.</p>
+      <p class="text">Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla besser verstehen.</p>
     </div>
 
   </div>
