--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>about me</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla besser verstehen.">
+    <meta name="description" content="Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla! besser verstehen.">
     <link rel="canonical" href="http://www.joomlo.de/about/">
 
     <!-- Custom CSS -->
@@ -133,7 +133,7 @@
     </div>
 
     <div class="footer-col-3 column">
-      <p class="text">Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla besser verstehen.</p>
+      <p class="text">Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla! besser verstehen.</p>
     </div>
 
   </div>
