--- a/impressum/index.html
+++ b/impressum/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>impressum</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla besser verstehen.">
+    <meta name="description" content="Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla! besser verstehen.">
     <link rel="canonical" href="http://www.joomlo.de/impressum/">
 
     <!-- Custom CSS -->
@@ -172,7 +172,7 @@ Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend e
     </div>
 
     <div class="footer-col-3 column">
-      <p class="text">Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla besser verstehen.</p>
+      <p class="text">Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla! besser verstehen.</p>
     </div>
 
   </div>
