--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Joomlo - Joomla! einfach besser verstehen.</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla besser verstehen.">
+    <meta name="description" content="Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla! besser verstehen.">
     <link rel="canonical" href="http://www.joomlo.de/">
 
     <!-- Custom CSS -->
@@ -146,7 +146,7 @@
     </div>
 
     <div class="footer-col-3 column">
-      <p class="text">Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla besser verstehen.</p>
+      <p class="text">Ein Blog rund um Joomla! - Lösungen, Hilfe und Support - Joomla! besser verstehen.</p>
     </div>
 
   </div>
