--- a/about/index.html
+++ b/about/index.html
@@ -86,10 +86,10 @@
 
     <div class="footer-col-1 column">
       <ul>
-        <li>Joomlo - Joomla! einfach besser verstehen.</li>
+        < <li>Joomlo - Joomla! einfach besser verstehen.</li>
         <li><a href="mailto:info@mittl-medien.de">info@mittl-medien.de</a></li>
-        <li><a href="tel:004971174009879">0049 (0) 711 74 00 98 79</a></li>
-        <li><a href="http://mittl-medien.de">mittl-medien.de</a></li>
+        <li><a href="tel:004971634089994">0049 (0)7163 408 99 94</a></li>
+<li><a href="http://mittl-medien.de">mittl-medien.de</a></li>
       </ul>
     </div>
 
